--- a/index.html
+++ b/index.html
@@ -1,14 +1,88 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>My Design</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!--[if IE]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-		<link href="stylesheets/style.css" type="text/css" rel="stylesheet" >
-		</head>
-		<body>
-			<p>Hello world</p>
-		</body>
-	</html>
+<head>
+    <title>My Design</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--[if IE]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <link href="stylesheets/style.css" type="text/css" rel="stylesheet">
+</head>
+<body>
+<header>
+    <div class="header-div">
+        <img class='header-left-pic' src="images/ios_icon.png"/>
+        <span class="slid-text">slideshare</span>
+
+        <div class="header-seperator"></div>
+        <input class="search-input" type="text" value="Search"></input>
+        <span class="icon-search"></span>
+        <span class="top-right">
+        <div class="inline-block upload-lable">Upload</div>
+        <div class="inline-block head-right-img-div"></div>
+        </span>
+    </div>
+</header>
+<nav>
+    <span>Home</span>
+    <span>Leadership</span>
+    <span>Technology</span>
+    <span>Education</span>
+    <span>Marketing</span>
+    <span>Design</span>
+    <span>MoreTopics</span>
+
+</nav>
+<div class="center-body">
+    <div class="center-body-top">
+        <p class="first-line">Create your first SlidShare</p>
+
+        <p>Share a fun visual of your professinal journey with just a click</p>
+
+        <p class="middle-buttons">
+
+        <div class="center-in">
+            Create Now
+        </div>
+        <div class="center-thanks">No thanks</div>
+        </p>
+    </div>
+    <div class="center-body-pics">
+        <div class="phone-pic"></div>
+        <div class="pad-pic"></div>
+    </div>
+</div>
+<div class="bottom-body">
+    <div class="bottome-first-line">Get a new look at your key career milestones and share your<br/> Professional
+        Journey with others
+    </div>
+</div>
+<div class="bottom-seperator"></div>
+<div class="bottome-second-line">
+    <div class="bottom-part">
+        <div class="bottom-title">Connect via Linkedin</div>
+        <div class="bottom-detail">to automatically input your data</div>
+    </div>
+
+    <div class="bottom-part">
+        <div class="bottom-title">Pick a Template</div>
+        <div class="bottom-detail">of your choice</div>
+
+    </div>
+    <div class="bottom-part">
+        <div class="bottom-title">Publish Your Journey</div>
+        <div class="bottom-detail">to SlideShare</div>
+
+    </div>
+</div>
+<div class="bottom-last-line">
+    <div class="inline-block bottom-linkedin-div">
+    </div>
+    <p class="inline-block create-now-bottom">Create Now</p>
+</div>
+</div>
+<footer>
+    Linkedin Corparate @ 2015
+</footer>
+</body>
+</html>
