--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <div class="bottom-last-line">
     <div class="inline-block bottom-linkedin-div">
     </div>
-    <p class="inline-block create-now-bottom">Create Now</p>
+    Create Now
 </div>
 </div>
 <footer>
