--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 <body>
 <header>
-    <div class="header-div">
-        <img class='header-left-pic' src="images/ios_icon.png"/>
-        <span class="slid-text">slideshare</span>
+    <div class="top-left">
+        <img class='logo' src="images/ios_icon.png"/>
+        <label>slideshare</label>
 
-        <div class="header-seperator"></div>
         <input class="search-input" type="text" value="Search"></input>
         <span class="icon-search"></span>
-        <span class="top-right">
-        <div class="inline-block upload-lable">Upload</div>
+    </div>
+    <div class=" inline-block top-right">
+        <input class='top_button' type="button" value="Upload"></input>
+
         <div class="inline-block head-right-img-div"></div>
-        </span>
     </div>
 </header>
 <nav>
