--- a/index.html
+++ b/index.html
@@ -10,76 +10,89 @@
 </head>
 <body>
 <header>
-    <div class="top-left">
-        <img class='logo' src="images/ios_icon.png"/>
-        <label>slideshare</label>
+    <div class="top">
+        <div class="top-left">
+            <img class='logo' src="images/ios_icon.png"></img>
+            <label>slideshare</label>
 
-        <input class="search-input" type="text" value="Search"></input>
-        <span class="icon-search"></span>
-    </div>
-    <div class=" inline-block top-right">
-        <input class='top_button' type="button" value="Upload"></input>
+            <div class="seperator inline-block"></div>
+            <input class="search-input" type="text" value="Search"></input>
+            <span class="icon-search"></span>
+        </div>
+        <div class=" inline-block top-right">
+            <button class='head-right-but1'>Upload</button>
 
-        <div class="inline-block head-right-img-div"></div>
+            <button class="head-right-but2"></button>
+            <img class='header-pic' src="images/ios_icon.png"></img>
+        </div>
     </div>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Leadership</a></li>
+            <li><a href="#">Technology</a></li>
+            <li><a href="#">Education</a></li>
+            <li><a href="#">Marketing</a></li>
+            <li><a href="#">Design</a></li>
+            <li><a href="#">More Topics</a></li>
+        </ul>
+
+
+    </nav>
 </header>
-<nav>
-    <span>Home</span>
-    <span>Leadership</span>
-    <span>Technology</span>
-    <span>Education</span>
-    <span>Marketing</span>
-    <span>Design</span>
-    <span>MoreTopics</span>
 
-</nav>
-<div class="center-body">
-    <div class="center-body-top">
+<div class="main">
+    <div class="main-top">
         <p class="first-line">Create your first SlidShare</p>
 
         <p>Share a fun visual of your professinal journey with just a click</p>
 
-        <p class="middle-buttons">
-
-        <div class="center-in">
-            Create Now
+        <div class="main-buttons">
+            <button class="main-but1">
+                <span class="main-but1-content">Create Now</span>
+            </button>
+            <button class="main-but2">No thanks</button>
         </div>
-        <div class="center-thanks">No thanks</div>
-        </p>
     </div>
+
     <div class="center-body-pics">
         <div class="phone-pic"></div>
         <div class="pad-pic"></div>
     </div>
+
 </div>
-<div class="bottom-body">
-    <div class="bottome-first-line">Get a new look at your key career milestones and share your<br/> Professional
+
+<div class="footer">
+    <p >Get a new look at your key career milestones and share your<br/> Professional
         Journey with others
-    </div>
-</div>
-<div class="bottom-seperator"></div>
-<div class="bottome-second-line">
-    <div class="bottom-part">
-        <div class="bottom-title">Connect via Linkedin</div>
-        <div class="bottom-detail">to automatically input your data</div>
-    </div>
+    </p>
 
-    <div class="bottom-part">
-        <div class="bottom-title">Pick a Template</div>
-        <div class="bottom-detail">of your choice</div>
+    <div class="bottom-seperator"></div>
+    <ul class="footer-list">
+        <li>
+            <p class="bottom-title">Connect via Linkedin</p>
+            <p class="bottom-detail">to automatically input your data</p>
+        </li>
+        <li class="footer-line-sep">&gt;</li>
+        <li >
+            <p class="bottom-title">Pick a Template</p>
+            <p class="bottom-detail">of your choice</p>
 
-    </div>
-    <div class="bottom-part">
-        <div class="bottom-title">Publish Your Journey</div>
-        <div class="bottom-detail">to SlideShare</div>
+        </li>
+        <li class="footer-line-sep">&gt;</li>
+        <li>
+            <p class="bottom-title">Publish Your Journey</p>
+            <p class="bottom-detail">to SlideShare</p>
 
+        </li>
+
+    </ul>
+
+    <div class="footer-button">
+        <div class="inline-block bottom-linkedin-div">
+        </div>
+        Create Now
     </div>
-</div>
-<div class="bottom-last-line">
-    <div class="inline-block bottom-linkedin-div">
-    </div>
-    Create Now
-</div>
 </div>
 <footer>
     Linkedin Corparate @ 2015
